# clinical-trial-visualization-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  api.py  config.py  errors.py  templating.py
app/agent/: __init__.py  visualization.py
app/clinical_trials/: __init__.py  aggregation.py  client.py  compact.py  extract.py  filters.py  metadata.py  tools.py
app/models/: __init__.py  schemas.py
app/routes/: web.py
app/services/: conversation.py  pipeline.py  tracing_config.py  visualization_builder.py
app/validation/: clinical_question.py
evaluation/: __init__.py  dataset.json
evaluation/fixtures/: sample_agent_output.json  sample_query_response.json
examples/: 01_breakdown_by_phase.json  02_trial_list_table.json  03_network_graph.json  04_time_series.json  05_single_count.json  README.md
static/css/: app.css
static/js/: chat.js  render.js
templates/: base.html  index.html
tests/: conftest.py  helpers.py  test_chart_type.py  test_clinical_validation.py  test_compact.py  test_integration.py  test_schemas.py  test_tracing_config.py
